--- a/model_t/movie_recom.ipynb
+++ b/model_t/movie_recom.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e91574ac",
    "metadata": {},
    "outputs": [],
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "87e96d6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing data from a CSV file\n",
-    "movies = pd.read_csv(\"dataSet/movies.csv\")\n",
-    "credits = pd.read_csv(\"dataSet/credits.csv\")"
+    "movies = pd.read_csv(\"training_data/movies.csv\")\n",
+    "credits = pd.read_csv(\"training_data/credits.csv\")"
    ]
   },
   {
@@ -147,7 +147,7 @@
          "type": "integer"
         }
        ],
-       "ref": "75cfb286-b9fc-4d3f-be4c-a77aef0b284c",
+       "ref": "871df31e-7fef-49b3-8487-fbaff4d24261",
        "rows": [
         [
          "0",
@@ -548,7 +548,7 @@
          "type": "string"
         }
        ],
-       "ref": "bfd4658b-4fc0-49a6-b79a-c2b17c049b93",
+       "ref": "8cf0bf75-258f-422d-b55d-4efd186a5003",
        "rows": [
         [
          "0",
@@ -814,7 +814,7 @@
          "type": "string"
         }
        ],
-       "ref": "dc40f9a5-b3fb-474f-a1d9-50d4a4985834",
+       "ref": "27dd05e0-4196-4128-90ed-1dfd557b78bc",
        "rows": [
         [
          "0",
@@ -1029,7 +1029,7 @@
          "type": "integer"
         }
        ],
-       "ref": "07eab72b-0e66-4f0a-8033-e1c151ef2676",
+       "ref": "f587d4b0-fa47-4b75-98b3-6953018f88a8",
        "rows": [
         [
          "movie_id",
@@ -1116,7 +1116,7 @@
          "type": "integer"
         }
        ],
-       "ref": "bd4da2ef-4a02-476f-8892-f68b51215a01",
+       "ref": "2289da5f-8060-4206-a817-9711bb8ae24c",
        "rows": [
         [
          "movie_id",
@@ -1265,7 +1265,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "b02e0770-6db1-4442-8812-c53dd445bd56",
+       "ref": "a92346be-6a2e-4c1e-894d-9d251b7bcef0",
        "rows": [
         [
          "0",
@@ -1532,7 +1532,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "528ce007-f68c-4e28-99f9-4523c052fc7e",
+       "ref": "168b8490-e9f7-4690-8434-98047a0c23bc",
        "rows": [
         [
          "0",
@@ -1770,7 +1770,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "cd45e7d9-380d-4cfd-b2d2-f476239a1d6c",
+       "ref": "dd34e738-861f-467d-8945-29fbc1e560ce",
        "rows": [
         [
          "0",
@@ -2028,7 +2028,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "decbdce7-cafd-4c97-ba37-6bde07e9bff3",
+       "ref": "80333da9-074f-4317-9048-6b138c8d1785",
        "rows": [
         [
          "0",
@@ -2243,7 +2243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\TechShort\\AppData\\Local\\Temp\\ipykernel_19896\\2198607913.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\TechShort\\AppData\\Local\\Temp\\ipykernel_2156\\2198607913.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2288,7 +2288,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "13cf7815-c8cf-4523-b42f-ad816ef97d74",
+       "ref": "4d55a2c0-59d9-4956-ac96-f1e85c8f2043",
        "rows": [
         [
          "0",
@@ -2420,7 +2420,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\TechShort\\AppData\\Local\\Temp\\ipykernel_19896\\1177805527.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\TechShort\\AppData\\Local\\Temp\\ipykernel_2156\\1177805527.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2464,7 +2464,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\TechShort\\AppData\\Local\\Temp\\ipykernel_19896\\3214958533.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\TechShort\\AppData\\Local\\Temp\\ipykernel_2156\\3214958533.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2545,7 +2545,7 @@
          "type": "string"
         }
        ],
-       "ref": "8c62e57f-5a32-4535-ad41-924afe6c702f",
+       "ref": "7a56884d-a0af-40cd-bc19-f32a091ac6ae",
        "rows": [
         [
          "0",
@@ -2961,7 +2961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "a54c18f0",
    "metadata": {},
    "outputs": [],
@@ -2972,7 +2972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "a744d897",
    "metadata": {},
    "outputs": [],
